# octopus_games

./: .gitignore  AVLTree.h  CMakeLists.txt  GameManager.cpp  GameManager.h  Group.cpp  Group.h  GroupNotEmpty.cpp  GroupNotEmpty.h  Player.cpp  Player.h  PlayerById.cpp  PlayerById.h  PlayerByLevel.cpp  PlayerByLevel.h  PlayerInGroup.cpp  PlayerInGroup.h  README.md  TreeNode.h  Utils.h  common_fwd.h  library1.cpp  library1.h  main.cpp  main1.cpp
tests/: .txt  EG.txt  TNCAF.txt  extreme_generated  test1  test1_out
